correctly handle color picker on small displays

--- a/viewer/avnav_viewer.less
+++ b/viewer/avnav_viewer.less
@@ -1629,6 +1629,10 @@ button.avb_GpsCenter{
     .avm_listEntryItem();
   }
 }
+.avn_colorPicker{
+  .flex-display();
+  .flex-direction(row);
+}
 #avi_settingspage .avn_flexRow{
   height: 100%;
 }
